spacing issue with adsense

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -768,7 +768,7 @@ div.brandSchoolBanner {
 	position: absolute;
 	width: 468px;
   height: 60px;
-  bottom: 10%;
+  bottom: 13%;
   left: 33%;
 	outline: black solid 1px;
 }
